generated/checker-for-evaluation/generated/test-UAF-9462f4ca56e7d2430fdb6dcc8498244acbfc4489/build_logs/1/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:25:54: error: macro "REGISTER_MAP_WITH_PROGRAMSTATE" requires 3 arguments, but only 2 given
   25 | REGISTER_MAP_WITH_PROGRAMSTATE(SpinLockAcquired, bool)
      |                                                      ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ExprEngine.h:25,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:4,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:3:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:87: note: macro "REGISTER_MAP_WITH_PROGRAMSTATE" defined here
   87 |   #define REGISTER_MAP_WITH_PROGRAMSTATE(Name, Key, Value) \
      | 
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:25:1: error: ‘REGISTER_MAP_WITH_PROGRAMSTATE’ does not name a type
   25 | REGISTER_MAP_WITH_PROGRAMSTATE(SpinLockAcquired, bool)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘void clang_registerCheckers(clang::ento::CheckerRegistry&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:142:23: error: ‘SAGenTestChecker’ was not declared in this scope
  142 |   registry.addChecker<SAGenTestChecker>(
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:142:40: error: no matching function for call to ‘clang::ento::CheckerRegistry::addChecker<<expression error> >(const char [24], const char [71], const char [1])’
  142 |   registry.addChecker<SAGenTestChecker>(
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  143 |       "custom.SAGenTestChecker",
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~        
  144 |       "Detects unsynchronized deallocation of shared lists in gsm_cleanup_mux",
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  145 |       "");
      |       ~~~                               
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:14:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:128:8: note: candidate: ‘template<class T> void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool)’
  128 |   void addChecker(StringRef FullName, StringRef Desc, StringRef DocsUri,
      |        ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:128:8: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:142:40: error: template argument 1 is invalid
  142 |   registry.addChecker<SAGenTestChecker>(
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  143 |       "custom.SAGenTestChecker",
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~        
  144 |       "Detects unsynchronized deallocation of shared lists in gsm_cleanup_mux",
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  145 |       "");
      |       ~~~                               
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
